Archive2/c2/884dc835ee2d2d/output
main.cpp:17:27: error: expected '>' before '...' token
 template<R(C::*F)(Args...)...>
                           ^
main.cpp:19:63: error: template argument 1 is invalid
     FunctionSequence<C, R(Args...)>::Type<R(C::*...F)(Args...)>::f[sizeof...(F)]
                                                               ^
main.cpp:19:79: error: expansion pattern 'F' contains no argument packs
     FunctionSequence<C, R(Args...)>::Type<R(C::*...F)(Args...)>::f[sizeof...(F)]
                                                                               ^
main.cpp:19:5: error: too many template-parameter-lists
     FunctionSequence<C, R(Args...)>::Type<R(C::*...F)(Args...)>::f[sizeof...(F)]
     ^
main.cpp:20:19: warning: extra ';' [-Wpedantic]
         = { F... };
                   ^
